fix nav to always be visible when scrolling by applying position sticky and appropriate CSS properties

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,5 +1,6 @@
 header {
   display: flex;
+  position: relative;
   justify-content: center;
   align-items: center;
   flex-direction: column;
